run checks on main/dev/actions pushes and main merges

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,15 @@
 name: CI
 
 on:
+  # run when pushing to these
   push:
     branches:
       - main
+      - dev
+      - actions
   pull_request:
+    branches:
+      - main # catches errors before merging
 
 jobs:
   check:
